<resources>
    <string name="app_name">QRAbsent</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>
    <string name="name">Fullname</string>
    <string name="search_seminar">Search Seminar</string>
    <string name="action_login">Login</string>
    <string name="home">Home</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="seminar">Seminar</string>
    <string name="about_us">About Us</string>
    <string name="seminar_show">Seminar :</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="select_seminar">Seminar :</string>
    <string name="username">Name :</string>
    <string name="description">Description :</string>
    <string name="generate">Generate QR Code</string>
    <string name="barcode">QR Code</string>
    <string name="next">Next</string>
    <string name="about">About Us</string>
    <string name="back_to_home">Back To Home</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="history">History</string>
    <string name="add_phone">Phone Number</string>
    <string name="qrcode">QR Code</string>
    <string name="title_activity_show_seminar">ShowSeminarActivity</string>
</resources>
