<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.QRActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/qrViewOutput"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/barcode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qrViewOutput"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/saveQR_cv"
                android:layout_width="wrap_content"
                card_view:cardCornerRadius="30dp"
                card_view:cardMaxElevation="5dp"
                card_view:contentPadding="10dp"
                android:onClick="downloadImage"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="downloadImage"
                    android:background="@drawable/ic_download" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/shareQR_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="shareImage"
                card_view:cardCornerRadius="30dp"
                card_view:cardMaxElevation="5dp"
                card_view:contentPadding="10dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="shareImage"
                    android:background="@drawable/ic_share" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/btn_login_bg"
            android:text="@string/generate"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="backToHome"
            android:layout_alignParentBottom="true"
            android:background="@color/btn_login_bg"
            android:text="@string/back_to_home"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>